TSK-1943: added REST endpoint for requesting a review on a Task